--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "seed": "npm run build && typeorm-extension seed:run -d dist/database/data-source.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -25,7 +26,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@supabase/supabase-js": "^2.50.2",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
@@ -33,10 +36,13 @@
     "ejs": "^3.1.10",
     "express-ejs-layouts": "^2.5.1",
     "multer": "^2.0.1",
+    "mysql2": "^3.16.0",
     "openai": "^5.5.1",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.28",
+    "typeorm-extension": "^3.7.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
